syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service RegisterPixKeyService {
  rpc registerKey(RegisterPixKeyRequestGrpc) returns (RegisterPixKeyResponseGrpc) {}
}

service RemovePixKeyService {
  rpc removeKey(RemovePixKeyRequestGrpc) returns (RemovePixKeyResponseGrpc) {}
}

service FindPixKeyService {
  rpc findKey(FindPixKeyRequestGrpc) returns (FindPixKeyResponseGrpc) {}
}

service ListPixKeyService {
  rpc findKeys(ListPixKeyRequestGrpc) returns (ListPixKeyResponseGrpc) {}
}

enum KeyTypeGrpc {
  CPF = 0;
  CNPJ = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum AccountTypeGrpc {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message RegisterPixKeyRequestGrpc {
  string clientId = 1;
  KeyTypeGrpc keyType = 2;
  string keyValue = 3;
  AccountTypeGrpc accountType = 4;
}

message  RegisterPixKeyResponseGrpc {
  string pixId = 1;
}

message RemovePixKeyRequestGrpc {
  string clientId = 1;
  string pixId = 2;
}

message RemovePixKeyResponseGrpc {}

message FindPixKeyRequestGrpc {
  message FilterByPixIdGrpc {
    string clientId = 1;
    string pixId = 2;
  }

  oneof filter {
    FilterByPixIdGrpc pixId = 1;
    string keyValue = 2;
  }
}

message BankAccountGrpc {
  string institutionName = 1;
  string agency = 2;
  string number = 3;
  AccountTypeGrpc accountType = 4;
  HolderGrpc holder = 5;
}

message HolderGrpc {
  string id = 1;
  string name = 2;
  string document = 3;
}

message FindPixKeyResponseGrpc {
  string pixId = 1;
  KeyTypeGrpc keyType = 2;
  string keyValue = 3;
  google.protobuf.Timestamp createdAt = 4;
  BankAccountGrpc account = 5;
}

message ListPixKeyRequestGrpc {
  string clientId = 1;
}

message ListPixKeyDetailsGrpc {
  string pixId = 1;
  string clientId = 2;
  KeyTypeGrpc keyType = 3;
  string keyValue = 4;
  AccountTypeGrpc accountType = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message ListPixKeyResponseGrpc {
  repeated ListPixKeyDetailsGrpc pixKeys = 1;
}